@startuml
top to bottom direction

class Game{}

class Player{
    - name
}

class Question {
    - text
    - difficulty
}

class Answer{
    - text
    - isCorrect
    - points
}

class Game_Question{}

class Answered{}

Player "1" <-left- "*" Game

Game "*" -- "*" Question

(Game,Question) .. Game_Question

Question "1"<--"*" Answer

Game_Question "*"--"*" Answer

(Game_Question, Answer) .. Answered

note right of Answer
    There are multiple correct options, or multiple wrong options
end note
@enduml